--- a/q1.html
+++ b/q1.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Add a contact phone number to the included form. Be sure to use the correct type for your input. 
-    Make the input match the formatting on the rest of the fields. Make sure that the input type for the 
-    email is also correct. Use the "required" attribute correctly to make sure that all the inputs on the 
-    form must be filled in before the form is submitted.-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" crossorigin="anonymous" />
     <style>
         .form-box {
@@ -27,19 +23,24 @@
                 <form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
                     <div class="form-group">
                         <label for="name">First and Last Name</label>
-                        <input class="form-control" id="name" type="text" name="Name">
+                        <input class="form-control" id="name" type="text" name="Name" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email Address</label>
-                        <input class="form-control" id="email" type="email" name="Email">
+                        <input class="form-control" id="email" type="email" name="Email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone Number</label>
+                        <input class="form-control" id="phone" type="tel" name="Phone" pattern="[0-9]{10}" placeholder="1234567890" required>
+                        <small class="form-text text-muted">Please enter a 10-digit phone number without dashes or spaces.</small>
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea class="form-control" id="message" name="Message"></textarea>
+                        <textarea class="form-control" id="message" name="Message" required></textarea>
                     </div>
                     <input class="btn btn-primary" type="submit" value="Submit" />
+                </form>
             </div>
-            </form>
         </section>
     </main>
 </body>
